Fix overflow content on homepage

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,8 @@
+.home {
+	max-width: 100vw;
+	overflow-x: hidden;
+}
+
 .home main {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
